Revert "Merge pull request #373 from vas85/Fix-Avatar-vertical-Spacing"
This reverts commit 7186a80e198ce17ab4ba4b9fe291f445e1778381, reversing
changes made to c95b0fe46854cefd43bf1c42254633bd067ce65f.

--- a/src/components/app/base/Avatar/Avatar.scss
+++ b/src/components/app/base/Avatar/Avatar.scss
@@ -3,7 +3,7 @@
 .avatar-wrapper {
   display: flex;
   align-items: center;
-  padding: 4px 0 px 8px;
+  padding: 8px 0;
 }
 
 .avatar-thumb {
